<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016. Dmytro Karataiev
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app.name">Earthquake Survival</string>
    <string name="recyclerview.empty.text">Oops! Something is wrong. Please check your internet connection and try again.</string>
    <string name="recyclerview.empty.online">Probably you should check your settings as you are online, but there are no earthquakes matching your request.</string>

    <string name="temp.string">Hello World from section: %1$d</string>

    <!-- Strings related to Menu -->
    <string name="menu.button.settings">Settings</string>
    <string name="menu.button.refresh">Refresh</string>
    <string name="menu.button.share">Share</string>
    <string name="menu_button_survive">Survive</string>
    <string name="menu_button_sort">Sort</string>
    <string name="sort_time">Time</string>
    <string name="menu_item_sort_magnitude">Magnitude</string>
    <string name="menu_item_sort_distance">Distance</string>

    <!-- Strings related to Settings -->
    <string name="settings.title">Settings</string>
    <string name="settings.title.sync">System sync settings</string>
    <string name="settings.title.notifications">Notifications</string>
    <string name="settings.title.faultlines">Fault lines</string>
    <string name="settings.header.sync">Sync frequency</string>
    <string name="settings.header.notifications">Notifications</string>

    <string-array name="settings_sync_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="settings_sync_values">
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
        <item>14400</item>
        <item>28800</item>
        <item>57600</item>
        <item>-1</item>
    </string-array>

    <string name="settings.title.magnitude">Magnitude</string>
    <string name="settings.summary.magnitude">Show earthquakes stronger than</string>
    <string name="settings.title.distance">Notify when near the area</string>
    <string name="settings.summary.distance">Distance from the earthquake</string>

    <!-- Shared Preferences Values -->
    <string name="sharedprefs.key.latitude" translatable="false">lat</string>
    <string name="sharedprefs.key.longitude" translatable="false">lng</string>
    <string name="sharedprefs.key.syncfrequency" translatable="false">sync-frequency</string>
    <string name="sharedprefs.key.magnitude" translatable="false">magn</string>
    <string name="sharedprefs.key.distance" translatable="false">dist</string>
    <string name="sharedprefs.key.notifications" translatable="false">notif</string>
    <string name="sharedprefs.key.faultlines" translatable="false">faults</string>
    <string name="sharedprefs_key_lastnotification" translatable="false">last_notification</string>
    <string name="sharedprefs_key_last_countupdate" translatable="false">last_countupdate</string>
    <string name="sharedprefs_key_sort" translatable="false">sort</string>

    <!-- Fragments titles -->
    <string name="title.details">Earthquake Details</string>
    <string name="title.news">Current News</string>
    <string name="title.maps">World Map</string>
    <string name="title.recent">Recent earthquakes</string>
    <string name="title.info">Survival Info</string>

    <!-- Tabs titles -->
    <string name="tab.description">Tab button</string>
    <string name="title.tab.news">News</string>
    <string name="title.tab.maps">Map</string>
    <string name="title.tab.recent">Recent</string>
    <string name="title.tab.info">Info</string>

    <!-- Sync Adapter -->
    <string name="sync.account.type">com.adkdevelopment.earthquakesurvival</string>
    <string name="sync.provider.authority">com.adkdevelopment.earthquakesurvival.data.provider</string>

    <!-- Placeholder Strings -->
    <string name="earthquake.latitude">Latitude: <xliff:g id="latitude">%1$.4f</xliff:g></string>
    <string name="earthquake.longitude">Longitude: <xliff:g id="longitude">%1$.4f</xliff:g></string>
    <string name="earthquake.magnitude">Magnitude: <xliff:g id="magn">%1$.1f</xliff:g></string>
    <string name="earthquake_depth">Depth: <xliff:g id="depth">%1$.1f</xliff:g> miles</string>
    <string name="earthquake.statistics.day">Earthquakes today: <xliff:g id="day">%1$d</xliff:g></string>
    <string name="earthquake.statistics.week">This week: <xliff:g id="week">%1$d</xliff:g></string>
    <string name="earthquake.statistics.month">Last 30 days: <xliff:g id="month">%1$d</xliff:g></string>
    <string name="earthquake.statistics.year">Last 12 months: <xliff:g id="year">%1$d</xliff:g></string>
    <string name="earthquake.statistics.title">Earthquakes statistics:</string>

    <string name="earthquake.statistics.closest">Closest earthquake in 24 hours</string>
    <string name="earthquake.statistics.largest">Largest earthquake in 24 hours</string>
    <string name="earthquake.widget.largest">Largest:</string>
    <string name="earthquake.survive.image">Drop! Cover! Hold on!</string>
    <string name="earthquake.distance">From you: <xliff:g id="distance">%1$,.0f</xliff:g> miles</string>

    <string name="earthquake.link"><![CDATA[<a href="]]><xliff:g id="link">%1$s</xliff:g><![CDATA[">Learn more</a>]]></string>

    <!-- Geofence Strings -->
    <string name="geofence.error.unavailable">Geofence service is not available now</string>
    <string name="geofence.error.many_geofences">Your app has registered too many geofences</string>
    <string name="geofence.error.many_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="geofence.error.unknown">Unknown error: the Geofence service is not available now</string>
    <string name="geofence.error.invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_notification">Geofence notification occurred</string>
    <string name="geofence.transition.entered">Entered a dangerous place.</string>
    <string name="geofence.transition.exited">Exited a dangerous place.</string>
    <string name="geofence.transition.unknown">Unknown Transition</string>
    <string name="geofence.notification.text">Click notification to return to app and see the details.</string>
    <string name="geofence.log.added">Geofences added</string>

    <!-- Google Api Client -->
    <string name="googleapiclient.notconnected">GoogleApiClient not yet connected. Try again.</string>

    <!-- SharedTransitions -->
    <string name="transition.magnitude" translatable="false">magnitude</string>
    <string name="transition.date" translatable="false">date</string>
    <string name="transition.place" translatable="false">place</string>
    <string name="transition.distance" translatable="false">distance</string>
    <string name="transition.card" translatable="false">card</string>

    <!-- Survival Strings -->
    <string-array name="survival_array">
        <item name="survival_header">Image</item>
        <item name="survival_before">Before An Earthquake</item>
        <item name="survival_during">During An Earthquake</item>
        <item name="survival_after">After An Earthquake</item>
        <item name="survival_resources">Resources</item>
        <item name="survival_kit">Emergency supplies</item>
    </string-array>

    <string name="survival_before">Before An Earthquake</string>
    <string name="survival_during">During An Earthquake</string>
    <string name="survival_after">After An Earthquake</string>
    <string name="survival_resources">Resources</string>
    <string name="survival_kit">Emergency supplies</string>


    <string name="title_activity_info">How to survive</string>
    <string name="action_settings">Settings</string>

    <string name="send_email">Send email</string>
    <string name="widget_earthquakes_today">Earthquakes today:</string>
    <string name="widget_description">Description</string>
    <string name="widget_magnitude">Magnitude</string>
    <string name="widget_date">Date</string>
    <string name="widget_distance">Distance</string>
    <string name="title_activity_about">About</string>

    <!-- About Activity -->
    <string name="about_email">dmytro.karataiev@gmail.com</string>
    <string name="about_email_subject">Earthquake Survival Feedback and Proposals</string>
    <string name="about_email_body">Please share your feedback with the developer or ask for a new feature</string>
    <string name="about_text">Earthquake Survival allows you to see all the earthquakes around the world and notifies about closest to you
        (you can set the notifying threshold for strength and distance from you).
        \n\nYou can find the latest news about
        earthquakes, share info and statistics with your friends. Earthquake Survival also has a lot of useful information
        about what to do in case of emergency, who to call, what to buy and how to survive.
        \n\nThe App is completely free, open source and is released under the <a href="http://choosealicense.com/licenses/mit/">MIT licence</a>, more details you can find on the
        GitHub page: <a href="https://github.com/dmytroKarataiev/EarthquakeSurvival">Earthquake Survival</a>.
        \n\nPlease share your feedback with the developer or ask for a new feature by pressing the message button below.</string>
    <string name="about_send">Send Email</string>


    <!-- App Shortcuts -->
    <string name="shortcut_long_info">Detailed info about the app</string>
    <string name="shortcut_short_info">About the app</string>
    <string name="shortcut_disabled">Disabled</string>
    <string name="shortcut_long_report">Report an earthquake</string>
    <string name="shortcut_short_report">Felt it!</string>
    <string name="title_activity_report">Report an earthquake</string>

    <!-- Report activity -->
    <string name="report_url_disclaimer"><a href="http://earthquake.usgs.gov/data/dyfi/disclaimer.php#DYFIFormDisclaimer">PRA - Privacy Statement</a></string>

</resources>
