<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016. Dmytro Karataiev
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SurvivalFragment">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/SurvivalCard"
            android:id="@+id/survive_card_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/survive_card_image_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/earthquake.survive.image"
                android:scaleType="fitCenter"
                android:src="@drawable/dropcoverholdon" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/SurvivalCard"
            android:id="@+id/survive_card_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Survival.Text"
                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survival_before"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/SurvivalCard"
            android:id="@+id/survive_card_during"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Survival.Text"
                android:id="@+id/earthquake_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survival_during"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/SurvivalCard"
            android:id="@+id/survive_card_after"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Survival.Text"
                android:id="@+id/earthquake_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survival_after" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/SurvivalCard"
            android:id="@+id/survive_card_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Survival.Text"
                android:id="@+id/survive_more_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survival_resources" />


        </android.support.v7.widget.CardView>


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>